# complete-langchain

./: readme.md
01_langchain-playground/03_chains/: chains_01_basics.py
01_langchain-playground/04_rag/: rag_03_text_splitting.py  rag_08b_web_scrapping_firecrawl.py
02_multi-modal-chatbot/: README.md
02_multi-modal-chatbot/backend/app/: settings.py
03_multipleData-source-ragPipeline/backend/app/: chatbot.ipynb  main.py
03_multipleData-source-ragPipeline/frontend/: client.py
04_openai_function_calling_with_langchain/: README.md
04_openai_function_calling_with_langchain/app/: LCEL.ipynb
05_openai-conversational-qa/: pyproject.toml
05_openai-conversational-qa/app/: chatbot.py  db.py
06_learning-gradio/: pyproject.toml
complete-langchain/01_langchain-playground/01_chatmodels/: chat_model_04_user_conversations.py
complete-langchain/03_multipleData-source-ragPipeline/: readme.md
complete-langchain/04_openai_function_calling_with_langchain/: pyproject.toml
complete-langchain/04_openai_function_calling_with_langchain/app/: conversational-qa.ipynb  pydantic.ipynb
complete-langchain/06_mistralai/: .env  pyproject.toml
complete-langchain/06_mistralai/app/: chatbot.ipynb  conversational_qa.ipynb  function_calling.ipynb  main.py  prompting.ipynb
langchain-playground/: .env.example  pyproject.toml
langchain-playground/01_chatmodels/: chat_model_01_basic.py  chat_model_02_basic_conversation.py  chat_model_03_alternatives.py
langchain-playground/02_prompt_templates/: prompt_template_01_basics.py  prompt_template_02_chatmodel.py
langchain-playground/03_chains/: chains_01_basics.py  chains_02_under_hood.py  chains_03_extended.py  chains_05_branching.py
langchain-playground/04_rag/: rag_01a_basics.py  rag_02b_basics_metadata.py  rag_04_embedding.py  rag_05_retriever.py  rag_08_web_scrapping_basics.py  rag_2a_basics_metadata.py
langchain-playground/04_rag/books/: adventures_of_huckleberry_finn.txt  adventures_of_sherlock_holmes.txt  frankenstein.txt  langchain_demo.txt  odyssey.txt  romeo_and_juliet.txt  scarlet_letter.txt  tale_of_two_cities.txt
langchain-playground/04_rag/db/chroma_db_web_scrapping_basics/: chroma.sqlite3
langchain-playground/04_rag/db/chroma_db_web_scrapping_firecrawl/: chroma.sqlite3
langchain-playground/04_rag/db/chroma_db_with_metadata/49405dc6-dbd7-49cd-bc48-7482834e3b8c/: index_metadata.pickle
langchain-playground/05_agents_and_tools/agents_deep_dive/: agent_01_react_app.py  agent_02_docs_store.py
langchain-playground/05_agents_and_tools/tools_deep_dive/: tools_02_basics.py
langgraph/langgraph-playground/: pyproject.toml
langgraph/langgraph-playground/module01/: agent.ipynb  chain_graph.ipynb  main.py  memory_agent.ipynb  simple_graph.ipynb
langgraph/langgraph-playground/module02/: chatbot_external_memory.ipynb  chatbot_internal_memory.ipynb  schema_state.ipynb  state_multiple_schema.ipynb  state_reducers.ipynb  trim_filter.ipynb
langgraph/langgraph-playground/module02/state_db/: example.db-shm  example.db-wal
multi-modal-chatbot/: README.md
multi-modal-chatbot/backend/: .env.example  pyproject.toml
multi-modal-chatbot/backend/app/: chat.py
multi-modal-chatbot/client/: client.py
multipleData-source-ragPipeline/backend/: .env  .env.example  pyproject.toml
multipleData-source-ragPipeline/backend/app/: chatbot.py  settings.py
openai-conversational-qa/: README.md  pyproject.toml
openai-conversational-qa/app/: chatbot.py  main.py
openai_function_calling_with_langchain/: .env  README.md
openai_function_calling_with_langchain/app/: extraction.ipynb  tagging.ipynb  tools_routing.ipynb
(+14 files in other folders)
